alignment issue fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,6 +315,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #hero {
     text-align: center;
+    background-position: center top;
   }
   #hero h1 {
     font-size: 32px;
